@@ -428,24 +428,15 @@ LRESULT PublicHubsFrame::onFilterChar(UINT /*uMsg*/, WPARAM wParam, LPARAM /*lPa
 	return 0;
 }
 
-LRESULT PublicHubsFrame::onContextMenu(UINT /*uMsg*/, WPARAM /*wParam*/, LPARAM lParam, BOOL& /*bHandled*/) {
-	RECT rc;                    // client area of window 
+LRESULT PublicHubsFrame::onContextMenu(UINT /*uMsg*/, WPARAM wParam, LPARAM lParam, BOOL& bHandled) {
 	POINT pt = { GET_X_LPARAM(lParam), GET_Y_LPARAM(lParam) };        // location of mouse click 
 	
-	// Get the bounding rectangle of the client area. 
-	if(ctrlHubs.GetSelectedCount() == 1) {
-		ctrlHubs.GetClientRect(&rc);
-		ctrlHubs.ScreenToClient(&pt); 
-
-		if (PtInRect(&rc, pt)) 
-		{ 
-			ctrlHubs.ClientToScreen(&pt);
-			hubsMenu.TrackPopupMenu(TPM_LEFTALIGN | TPM_RIGHTBUTTON, pt.x, pt.y, m_hWnd);
-
-			return TRUE; 
-		}
+	if((HWND)wParam == ctrlHubs && ctrlHubs.GetSelectedCount() == 1) {
+		hubsMenu.TrackPopupMenu(TPM_LEFTALIGN | TPM_RIGHTBUTTON, pt.x, pt.y, m_hWnd);
+		return TRUE; 
 	}
 	
+	bHandled = FALSE;
 	return FALSE; 
 }
 
@@ -470,6 +461,6 @@ void PublicHubsFrame::updateDropDown() {
 
 /**
  * @file
- * $Id: PublicHubsFrm.cpp,v 1.34 2005/01/05 19:30:20 arnetheduck Exp $
+ * $Id: PublicHubsFrm.cpp,v 1.35 2005/03/19 16:17:42 arnetheduck Exp $
  */
 
